--- a/segmenting-clustering.ipynb
+++ b/segmenting-clustering.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
        "(289, 3)"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 257,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 258,
    "metadata": {
     "scrolled": false
    },
@@ -179,7 +179,7 @@
        "5  M5A  Downtown Toronto      Harbourfront"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
        "9  M7A  Queen's Park  Not assigned"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 259,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 260,
    "metadata": {
     "scrolled": true
    },
@@ -301,7 +301,7 @@
        "9        M7A  Queen's Park  Not assigned"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 260,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        "(210, 3)"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 261,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
        "7        M6A        North York  Lawrence Heights"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 262,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
        "6        M5A  Downtown Toronto   Regent Park"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 263,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 265,
    "metadata": {
     "scrolled": true
    },
@@ -567,7 +567,7 @@
        "53        M5A  Downtown Toronto  Harbourfront,Regent Park"
       ]
      },
-     "execution_count": 229,
+     "execution_count": 265,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 266,
    "metadata": {
     "scrolled": true
    },
@@ -626,7 +626,7 @@
        "100        M9V  Etobicoke  Albion Gardens,Beaumond Heights,Humbergate,Jam..."
       ]
      },
-     "execution_count": 230,
+     "execution_count": 266,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +682,7 @@
        "35        M4B  East York  Woodbine Gardens,Parkview Hill"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 267,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 268,
    "metadata": {
     "scrolled": false
    },
@@ -775,7 +775,7 @@
        "4        M1H  Scarborough                             Cedarbrae"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 268,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +866,7 @@
        "4         M1H  43.773136 -79.239476"
       ]
      },
-     "execution_count": 233,
+     "execution_count": 269,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +992,7 @@
        "4  43.773136 -79.239476  "
       ]
      },
-     "execution_count": 235,
+     "execution_count": 271,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [
     {
@@ -1035,8 +1035,8 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>PostalCode</th>\n",
-       "      <th>Neighbourhood</th>\n",
        "      <th>Borough</th>\n",
+       "      <th>Neighbourhood</th>\n",
        "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
        "    </tr>\n",
@@ -1291,6 +1291,14 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>M6B</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Glencairn</td>\n",
+       "      <td>43.709577</td>\n",
+       "      <td>-79.445073</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>73</th>\n",
        "      <td>M6C</td>\n",
        "      <td>York</td>\n",
@@ -1388,14 +1396,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>85</th>\n",
-       "      <td>M7A</td>\n",
-       "      <td>Queen's Park</td>\n",
-       "      <td>Not assigned</td>\n",
-       "      <td>43.662301</td>\n",
-       "      <td>-79.389494</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>86</th>\n",
        "      <td>M7R</td>\n",
        "      <td>Mississauga</td>\n",
        "      <td>Canada Post Gateway Processing Centre</td>\n",
@@ -1403,7 +1403,7 @@
        "      <td>-79.615819</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>87</th>\n",
+       "      <th>86</th>\n",
        "      <td>M7Y</td>\n",
        "      <td>East Toronto</td>\n",
        "      <td>Business Reply Mail Processing Centre 969 Eastern</td>\n",
@@ -1411,7 +1411,7 @@
        "      <td>-79.321558</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>88</th>\n",
+       "      <th>87</th>\n",
        "      <td>M8V</td>\n",
        "      <td>Etobicoke</td>\n",
        "      <td>Humber Bay Shores,Mimico South,New Toronto</td>\n",
@@ -1419,7 +1419,7 @@
        "      <td>-79.501321</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>89</th>\n",
+       "      <th>88</th>\n",
        "      <td>M8W</td>\n",
        "      <td>Etobicoke</td>\n",
        "      <td>Alderwood,Long Branch</td>\n",
@@ -1427,7 +1427,7 @@
        "      <td>-79.543484</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>90</th>\n",
+       "      <th>89</th>\n",
        "      <td>M8X</td>\n",
        "      <td>Etobicoke</td>\n",
        "      <td>The Kingsway,Montgomery Road,Old Mill North</td>\n",
@@ -1435,7 +1435,7 @@
        "      <td>-79.506944</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>91</th>\n",
+       "      <th>90</th>\n",
        "      <td>M8Y</td>\n",
        "      <td>Etobicoke</td>\n",
        "      <td>Humber Bay,King's Mill Park,Kingsway Park Sout...</td>\n",
@@ -1443,7 +1443,7 @@
        "      <td>-79.498509</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>92</th>\n",
+       "      <th>91</th>\n",
        "      <td>M8Z</td>\n",
        "      <td>Etobicoke</td>\n",
        "      <td>Kingsway Park South West,Mimico NW,The Queensw...</td>\n",
@@ -1451,7 +1451,7 @@
        "      <td>-79.520999</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>93</th>\n",
+       "      <th>92</th>\n",
        "      <td>M9A</td>\n",
        "      <td>Etobicoke</td>\n",
        "      <td>Islington Avenue</td>\n",
@@ -1459,7 +1459,7 @@
        "      <td>-79.532242</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>94</th>\n",
+       "      <th>93</th>\n",
        "      <td>M9B</td>\n",
        "      <td>Etobicoke</td>\n",
        "      <td>Cloverdale,Islington,Martin Grove,Princess Gar...</td>\n",
@@ -1467,7 +1467,7 @@
        "      <td>-79.554724</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>95</th>\n",
+       "      <th>94</th>\n",
        "      <td>M9C</td>\n",
        "      <td>Etobicoke</td>\n",
        "      <td>Bloordale Gardens,Eringate,Markland Wood,Old B...</td>\n",
@@ -1475,7 +1475,7 @@
        "      <td>-79.577201</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>96</th>\n",
+       "      <th>95</th>\n",
        "      <td>M9L</td>\n",
        "      <td>North York</td>\n",
        "      <td>Humber Summit</td>\n",
@@ -1483,7 +1483,7 @@
        "      <td>-79.565963</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>97</th>\n",
+       "      <th>96</th>\n",
        "      <td>M9M</td>\n",
        "      <td>North York</td>\n",
        "      <td>Emery,Humberlea</td>\n",
@@ -1491,7 +1491,7 @@
        "      <td>-79.532242</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>98</th>\n",
+       "      <th>97</th>\n",
        "      <td>M9N</td>\n",
        "      <td>York</td>\n",
        "      <td>Weston</td>\n",
@@ -1499,7 +1499,7 @@
        "      <td>-79.518188</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>99</th>\n",
+       "      <th>98</th>\n",
        "      <td>M9P</td>\n",
        "      <td>Etobicoke</td>\n",
        "      <td>Westmount</td>\n",
@@ -1507,7 +1507,7 @@
        "      <td>-79.532242</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>100</th>\n",
+       "      <th>99</th>\n",
        "      <td>M9R</td>\n",
        "      <td>Etobicoke</td>\n",
        "      <td>Kingsview Village,Martin Grove Gardens,Richvie...</td>\n",
@@ -1515,7 +1515,7 @@
        "      <td>-79.554724</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>101</th>\n",
+       "      <th>100</th>\n",
        "      <td>M9V</td>\n",
        "      <td>Etobicoke</td>\n",
        "      <td>Albion Gardens,Beaumond Heights,Humbergate,Jam...</td>\n",
@@ -1523,7 +1523,7 @@
        "      <td>-79.588437</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>102</th>\n",
+       "      <th>101</th>\n",
        "      <td>M9W</td>\n",
        "      <td>Etobicoke</td>\n",
        "      <td>Northwest</td>\n",
@@ -1532,11 +1532,11 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>103 rows × 5 columns</p>\n",
+       "<p>102 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    PostalCode     Neighbourhood  \\\n",
+       "    PostalCode           Borough  \\\n",
        "0          M1B       Scarborough   \n",
        "1          M1C       Scarborough   \n",
        "2          M1E       Scarborough   \n",
@@ -1568,6 +1568,7 @@
        "28         M3H        North York   \n",
        "29         M3J        North York   \n",
        "..         ...               ...   \n",
+       "72         M6B        North York   \n",
        "73         M6C              York   \n",
        "74         M6E              York   \n",
        "75         M6G  Downtown Toronto   \n",
@@ -1580,26 +1581,25 @@
        "82         M6P      West Toronto   \n",
        "83         M6R      West Toronto   \n",
        "84         M6S      West Toronto   \n",
-       "85         M7A      Queen's Park   \n",
-       "86         M7R       Mississauga   \n",
-       "87         M7Y      East Toronto   \n",
-       "88         M8V         Etobicoke   \n",
-       "89         M8W         Etobicoke   \n",
-       "90         M8X         Etobicoke   \n",
-       "91         M8Y         Etobicoke   \n",
-       "92         M8Z         Etobicoke   \n",
-       "93         M9A         Etobicoke   \n",
-       "94         M9B         Etobicoke   \n",
-       "95         M9C         Etobicoke   \n",
-       "96         M9L        North York   \n",
-       "97         M9M        North York   \n",
-       "98         M9N              York   \n",
-       "99         M9P         Etobicoke   \n",
-       "100        M9R         Etobicoke   \n",
-       "101        M9V         Etobicoke   \n",
-       "102        M9W         Etobicoke   \n",
+       "85         M7R       Mississauga   \n",
+       "86         M7Y      East Toronto   \n",
+       "87         M8V         Etobicoke   \n",
+       "88         M8W         Etobicoke   \n",
+       "89         M8X         Etobicoke   \n",
+       "90         M8Y         Etobicoke   \n",
+       "91         M8Z         Etobicoke   \n",
+       "92         M9A         Etobicoke   \n",
+       "93         M9B         Etobicoke   \n",
+       "94         M9C         Etobicoke   \n",
+       "95         M9L        North York   \n",
+       "96         M9M        North York   \n",
+       "97         M9N              York   \n",
+       "98         M9P         Etobicoke   \n",
+       "99         M9R         Etobicoke   \n",
+       "100        M9V         Etobicoke   \n",
+       "101        M9W         Etobicoke   \n",
        "\n",
-       "                                               Borough   Latitude  Longitude  \n",
+       "                                         Neighbourhood   Latitude  Longitude  \n",
        "0                                        Rouge,Malvern  43.806686 -79.194353  \n",
        "1                 Highland Creek,Rouge Hill,Port Union  43.784535 -79.160497  \n",
        "2                      Guildwood,Morningside,West Hill  43.763573 -79.188711  \n",
@@ -1631,6 +1631,7 @@
        "28       Bathurst Manor,Downsview North,Wilson Heights  43.754328 -79.442259  \n",
        "29                      Northwood Park,York University  43.767980 -79.487262  \n",
        "..                                                 ...        ...        ...  \n",
+       "72                                           Glencairn  43.709577 -79.445073  \n",
        "73                                  Humewood-Cedarvale  43.693781 -79.428191  \n",
        "74                                 Caledonia-Fairbanks  43.689026 -79.453512  \n",
        "75                                            Christie  43.669542 -79.422564  \n",
@@ -1643,29 +1644,28 @@
        "82                        High Park,The Junction South  43.661608 -79.464763  \n",
        "83                               Parkdale,Roncesvalles  43.648960 -79.456325  \n",
        "84                                   Runnymede,Swansea  43.651571 -79.484450  \n",
-       "85                                        Not assigned  43.662301 -79.389494  \n",
-       "86               Canada Post Gateway Processing Centre  43.636966 -79.615819  \n",
-       "87   Business Reply Mail Processing Centre 969 Eastern  43.662744 -79.321558  \n",
-       "88          Humber Bay Shores,Mimico South,New Toronto  43.605647 -79.501321  \n",
-       "89                               Alderwood,Long Branch  43.602414 -79.543484  \n",
-       "90         The Kingsway,Montgomery Road,Old Mill North  43.653654 -79.506944  \n",
-       "91   Humber Bay,King's Mill Park,Kingsway Park Sout...  43.636258 -79.498509  \n",
-       "92   Kingsway Park South West,Mimico NW,The Queensw...  43.628841 -79.520999  \n",
-       "93                                    Islington Avenue  43.667856 -79.532242  \n",
-       "94   Cloverdale,Islington,Martin Grove,Princess Gar...  43.650943 -79.554724  \n",
-       "95   Bloordale Gardens,Eringate,Markland Wood,Old B...  43.643515 -79.577201  \n",
-       "96                                       Humber Summit  43.756303 -79.565963  \n",
-       "97                                     Emery,Humberlea  43.724766 -79.532242  \n",
-       "98                                              Weston  43.706876 -79.518188  \n",
-       "99                                           Westmount  43.696319 -79.532242  \n",
-       "100  Kingsview Village,Martin Grove Gardens,Richvie...  43.688905 -79.554724  \n",
-       "101  Albion Gardens,Beaumond Heights,Humbergate,Jam...  43.739416 -79.588437  \n",
-       "102                                          Northwest  43.706748 -79.594054  \n",
+       "85               Canada Post Gateway Processing Centre  43.636966 -79.615819  \n",
+       "86   Business Reply Mail Processing Centre 969 Eastern  43.662744 -79.321558  \n",
+       "87          Humber Bay Shores,Mimico South,New Toronto  43.605647 -79.501321  \n",
+       "88                               Alderwood,Long Branch  43.602414 -79.543484  \n",
+       "89         The Kingsway,Montgomery Road,Old Mill North  43.653654 -79.506944  \n",
+       "90   Humber Bay,King's Mill Park,Kingsway Park Sout...  43.636258 -79.498509  \n",
+       "91   Kingsway Park South West,Mimico NW,The Queensw...  43.628841 -79.520999  \n",
+       "92                                    Islington Avenue  43.667856 -79.532242  \n",
+       "93   Cloverdale,Islington,Martin Grove,Princess Gar...  43.650943 -79.554724  \n",
+       "94   Bloordale Gardens,Eringate,Markland Wood,Old B...  43.643515 -79.577201  \n",
+       "95                                       Humber Summit  43.756303 -79.565963  \n",
+       "96                                     Emery,Humberlea  43.724766 -79.532242  \n",
+       "97                                              Weston  43.706876 -79.518188  \n",
+       "98                                           Westmount  43.696319 -79.532242  \n",
+       "99   Kingsview Village,Martin Grove Gardens,Richvie...  43.688905 -79.554724  \n",
+       "100  Albion Gardens,Beaumond Heights,Humbergate,Jam...  43.739416 -79.588437  \n",
+       "101                                          Northwest  43.706748 -79.594054  \n",
        "\n",
-       "[103 rows x 5 columns]"
+       "[102 rows x 5 columns]"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 272,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1683,7 +1683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 273,
    "metadata": {
     "scrolled": true
    },
@@ -1694,7 +1694,7 @@
        "(102, 6)"
       ]
      },
-     "execution_count": 236,
+     "execution_count": 273,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1702,6 +1702,13 @@
    "source": [
     "dfinal.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
