Add image links to notebook

--- a/segmenting-clustering-map.ipynb
+++ b/segmenting-clustering-map.ipynb
@@ -589,6 +589,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Map1 url - https://github.com/notthatyoda/coursera-adsc/blob/master/map-1.png?raw=true"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Map1](https://github.com/notthatyoda/coursera-adsc/blob/master/map-1.png?raw=true)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "As suggested in the lab, let's take up all Borough's with Toronto in name and analyse those only further"
    ]
   },
@@ -753,6 +767,20 @@
     "        fill_opacity=0.7,\n",
     "        parse_html=False).add_to(map_TO)  \n",
     "map_TO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Map2 url - https://github.com/notthatyoda/coursera-adsc/blob/master/map-2.png?raw=true"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Map2](https://github.com/notthatyoda/coursera-adsc/blob/master/map-2.png?raw=true)"
    ]
   },
   {
@@ -2955,6 +2983,20 @@
     "        fill_opacity=0.7).add_to(map_clusters)\n",
     "       \n",
     "map_clusters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Map3 url-https://github.com/notthatyoda/coursera-adsc/blob/master/map-3.png?raw=true"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Map3](https://github.com/notthatyoda/coursera-adsc/blob/master/map-3.png?raw=true)"
    ]
   },
   {
