--- a/segmenting-clustering.ipynb
+++ b/segmenting-clustering.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 274,
    "metadata": {
     "scrolled": true
    },
@@ -39,17 +39,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting package metadata: done\n",
+      "WARNING conda.base.context:use_only_tar_bz2(632): Conda is constrained to only using the old .tar.bz2 file format because you have conda-build installed, and it is <3.18.3.  Update or remove conda-build to get smaller downloads and faster extractions.\n",
+      "Collecting package metadata (repodata.json): done\n",
       "Solving environment: done\n",
       "\n",
       "# All requested packages already installed.\n",
       "\n",
-      "Collecting package metadata: done\n",
+      "WARNING conda.base.context:use_only_tar_bz2(632): Conda is constrained to only using the old .tar.bz2 file format because you have conda-build installed, and it is <3.18.3.  Update or remove conda-build to get smaller downloads and faster extractions.\n",
+      "Collecting package metadata (repodata.json): done\n",
       "Solving environment: done\n",
       "\n",
       "# All requested packages already installed.\n",
       "\n",
-      "Collecting package metadata: done\n",
+      "WARNING conda.base.context:use_only_tar_bz2(632): Conda is constrained to only using the old .tar.bz2 file format because you have conda-build installed, and it is <3.18.3.  Update or remove conda-build to get smaller downloads and faster extractions.\n",
+      "Collecting package metadata (repodata.json): done\n",
       "Solving environment: done\n",
       "\n",
       "# All requested packages already installed.\n",
@@ -66,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +89,7 @@
        "(289, 3)"
       ]
      },
-     "execution_count": 257,
+     "execution_count": 276,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 277,
    "metadata": {
     "scrolled": false
    },
@@ -137,6 +140,12 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Postcode</td>\n",
+       "      <td>Borough</td>\n",
+       "      <td>Neighbourhood</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>M1A</td>\n",
        "      <td>Not assigned</td>\n",
@@ -160,38 +169,32 @@
        "      <td>North York</td>\n",
        "      <td>Victoria Village</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>M5A</td>\n",
-       "      <td>Downtown Toronto</td>\n",
-       "      <td>Harbourfront</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     0                 1                 2\n",
-       "1  M1A      Not assigned      Not assigned\n",
-       "2  M2A      Not assigned      Not assigned\n",
-       "3  M3A        North York         Parkwoods\n",
-       "4  M4A        North York  Victoria Village\n",
-       "5  M5A  Downtown Toronto      Harbourfront"
+       "          0             1                 2\n",
+       "0  Postcode       Borough     Neighbourhood\n",
+       "1       M1A  Not assigned      Not assigned\n",
+       "2       M2A  Not assigned      Not assigned\n",
+       "3       M3A    North York         Parkwoods\n",
+       "4       M4A    North York  Victoria Village"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 277,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df=df.drop([0])\n",
+    "\n",
     "df.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +239,7 @@
        "9  M7A  Queen's Park  Not assigned"
       ]
      },
-     "execution_count": 259,
+     "execution_count": 278,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 279,
    "metadata": {
     "scrolled": true
    },
@@ -301,7 +304,7 @@
        "9        M7A  Queen's Park  Not assigned"
       ]
      },
-     "execution_count": 260,
+     "execution_count": 279,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,16 +323,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(210, 3)"
+       "(211, 3)"
       ]
      },
-     "execution_count": 261,
+     "execution_count": 280,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [
     {
@@ -379,6 +382,12 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Postcode</td>\n",
+       "      <td>Borough</td>\n",
+       "      <td>Neighbourhood</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>M3A</td>\n",
        "      <td>North York</td>\n",
@@ -402,26 +411,20 @@
        "      <td>Downtown Toronto</td>\n",
        "      <td>Regent Park</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>M6A</td>\n",
-       "      <td>North York</td>\n",
-       "      <td>Lawrence Heights</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "  PostalCode           Borough     Neighbourhood\n",
+       "0   Postcode           Borough     Neighbourhood\n",
        "3        M3A        North York         Parkwoods\n",
        "4        M4A        North York  Victoria Village\n",
        "5        M5A  Downtown Toronto      Harbourfront\n",
-       "6        M5A  Downtown Toronto       Regent Park\n",
-       "7        M6A        North York  Lawrence Heights"
+       "6        M5A  Downtown Toronto       Regent Park"
       ]
      },
-     "execution_count": 262,
+     "execution_count": 281,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +488,7 @@
        "6        M5A  Downtown Toronto   Regent Park"
       ]
      },
-     "execution_count": 263,
+     "execution_count": 282,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 284,
    "metadata": {
     "scrolled": true
    },
@@ -567,7 +570,7 @@
        "53        M5A  Downtown Toronto  Harbourfront,Regent Park"
       ]
      },
-     "execution_count": 265,
+     "execution_count": 284,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 285,
    "metadata": {
     "scrolled": true
    },
@@ -626,7 +629,7 @@
        "100        M9V  Etobicoke  Albion Gardens,Beaumond Heights,Humbergate,Jam..."
       ]
      },
-     "execution_count": 266,
+     "execution_count": 285,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +685,7 @@
        "35        M4B  East York  Woodbine Gardens,Parkview Hill"
       ]
      },
-     "execution_count": 267,
+     "execution_count": 286,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 287,
    "metadata": {
     "scrolled": false
    },
@@ -775,7 +778,7 @@
        "4        M1H  Scarborough                             Cedarbrae"
       ]
      },
-     "execution_count": 268,
+     "execution_count": 287,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +869,7 @@
        "4         M1H  43.773136 -79.239476"
       ]
      },
-     "execution_count": 269,
+     "execution_count": 288,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +995,7 @@
        "4  43.773136 -79.239476  "
       ]
      },
-     "execution_count": 271,
+     "execution_count": 290,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [
     {
@@ -1291,14 +1294,6 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>72</th>\n",
-       "      <td>M6B</td>\n",
-       "      <td>North York</td>\n",
-       "      <td>Glencairn</td>\n",
-       "      <td>43.709577</td>\n",
-       "      <td>-79.445073</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>73</th>\n",
        "      <td>M6C</td>\n",
        "      <td>York</td>\n",
@@ -1530,9 +1525,17 @@
        "      <td>43.706748</td>\n",
        "      <td>-79.594054</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>Postcode</td>\n",
+       "      <td>Borough</td>\n",
+       "      <td>Neighbourhood</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>102 rows × 5 columns</p>\n",
+       "<p>103 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1568,7 +1571,6 @@
        "28         M3H        North York   \n",
        "29         M3J        North York   \n",
        "..         ...               ...   \n",
-       "72         M6B        North York   \n",
        "73         M6C              York   \n",
        "74         M6E              York   \n",
        "75         M6G  Downtown Toronto   \n",
@@ -1598,6 +1600,7 @@
        "99         M9R         Etobicoke   \n",
        "100        M9V         Etobicoke   \n",
        "101        M9W         Etobicoke   \n",
+       "102   Postcode           Borough   \n",
        "\n",
        "                                         Neighbourhood   Latitude  Longitude  \n",
        "0                                        Rouge,Malvern  43.806686 -79.194353  \n",
@@ -1631,7 +1634,6 @@
        "28       Bathurst Manor,Downsview North,Wilson Heights  43.754328 -79.442259  \n",
        "29                      Northwood Park,York University  43.767980 -79.487262  \n",
        "..                                                 ...        ...        ...  \n",
-       "72                                           Glencairn  43.709577 -79.445073  \n",
        "73                                  Humewood-Cedarvale  43.693781 -79.428191  \n",
        "74                                 Caledonia-Fairbanks  43.689026 -79.453512  \n",
        "75                                            Christie  43.669542 -79.422564  \n",
@@ -1661,11 +1663,12 @@
        "99   Kingsview Village,Martin Grove Gardens,Richvie...  43.688905 -79.554724  \n",
        "100  Albion Gardens,Beaumond Heights,Humbergate,Jam...  43.739416 -79.588437  \n",
        "101                                          Northwest  43.706748 -79.594054  \n",
+       "102                                      Neighbourhood        NaN        NaN  \n",
        "\n",
-       "[102 rows x 5 columns]"
+       "[103 rows x 5 columns]"
       ]
      },
-     "execution_count": 272,
+     "execution_count": 292,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1683,7 +1686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 293,
    "metadata": {
     "scrolled": true
    },
@@ -1691,10 +1694,10 @@
     {
      "data": {
       "text/plain": [
-       "(102, 6)"
+       "(103, 6)"
       ]
      },
-     "execution_count": 273,
+     "execution_count": 293,
      "metadata": {},
      "output_type": "execute_result"
     }
