business problem plus data  week 4

--- a/cp-bon.ipynb
+++ b/cp-bon.ipynb
@@ -11,7 +11,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Background:\n",
     "Shyamal is the director of a leading travel and tourism company in India. The company serves foreign tourists only and provide services for arranging stays, local sightseeing and private cabs. His company also prints travel guides for all cities in India for its customers. As of now all travel guides are printed in English Language. Shyamal wants to experiment and provide localized versions to its customers for some specific districts. He wants Yoda to find out which other two languages should be chosen for the travel guide. Additionally, he wants to finalize five cities for the beta launch of new travel guide. Shyamal also wants Yoda to suggest top 5 places for eating in these cities and highlight the best city among the five selected, as he plans to add content related to the same.\n",
+    "\n",
+    "Target Audience: Tourists visiting India\n",
+    "\n",
+    "Why it is important to solve: Many tourists who do not understand English will benefit from localized version of the travel guide. \n",
     "\n",
     "As part of this capstone project Yoda will work on Shyamal's business problem and share his recommendations backed by data analysis."
    ]
@@ -29,18 +34,22 @@
    "source": [
     "In order to find our languages we chose for translation, we need to find tourists visiting India belong to which nationalities mainly. And what is the most promiment spoken language in that country. \n",
     "\n",
-    "Yoda plans to use Indian Government data on foreign tourists to identify top nationalities. \n",
+    "1. Yoda plans to use Indian Government data on foreign tourists to identify top nationalities. \n",
     "\n",
     "[Foreign Tourist Arrivals In India from 2001 to 2015](https://data.gov.in/resources/foreign-tourist-arrivals-india-top-15-source-countries-2001-2015)\n",
-    "[State/UT wise details of foreign tourist visits](https://data.gov.in/resources/stateut-wise-details-foreign-tourist-visits-2014-2016-ministry-tourism)\n",
     "\n",
-    "Yoda will be using [wikipedia](https://en.wikipedia.org/wiki/List_of_official_languages_by_country_and_territory) to identify most spoken language for top 2 nations.\n",
+    "The above link provides data in various formats. Yoda plans to use CSV version. It contains yearly cumulative record of vistors from different countries. For the purpose of this project, we can leverage the data to project tourists in 2019 and use that projection to find top 2 countries. \n",
     "\n",
-    "For finding the cities for beta launch, we need to identify which cities were visted most by tourists from that nationality. \n",
     "\n",
-    "For top 5 places for eating, Yoda will leverage [foursquare APIs](https://foursquare.com/developers). \n",
+    "2. Yoda will be using [wikipedia](https://en.wikipedia.org/wiki/List_of_official_languages_by_country_and_territory) to identify the official language for top 2 nations.\n",
     "\n",
-    "In addition to the data from fourquare APIs, Yoda will leverage connectivity ([Example] (https://en.wikipedia.org/wiki/Jodhpur#Transportation), [cleanliness](http://indpaedia.com/ind/index.php/Cleanliness_ranks_of_Indian_cities,_districts:_2017#Ranks_1-434:_The_complete_list),most checkins (Foursquare) for finding the best district. \n"
+    "This page lists official languages for most nations. Yoda will leverage data collected in 1, to find the languages to be used for travel guides.\n",
+    "\n",
+    "3. For finding the cities for beta launch, we need to identify which cities were visted most by tourists from that nationality. \n",
+    "\n",
+    "4. For top 5 places for eating, Yoda will leverage [foursquare APIs](https://foursquare.com/developers). \n",
+    "\n",
+    "5. In addition to the data from fourquare APIs, Yoda will leverage connectivity (Example- https://en.wikipedia.org/wiki/Jodhpur#Transportation), [cleanliness](http://indpaedia.com/ind/index.php/Cleanliness_ranks_of_Indian_cities,_districts:_2017#Ranks_1-434:_The_complete_list),most checkins (Foursquare) for finding the best city among these five. \n"
    ]
   },
   {
