--- a/cp-bon.ipynb
+++ b/cp-bon.ipynb
@@ -14,7 +14,7 @@
     "Background:\n",
     "Shyamal is the director of a leading travel and tourism company in India. The company serves foreign tourists only and provide services for arranging stays, local sightseeing and private cabs. His company also prints travel guides for all cities in India for its customers. As of now all travel guides are printed in English Language. Shyamal wants to experiment and provide localized versions to its customers. He wants Yoda to find out which other two languages should be chosen for the travel guide. \n",
     "\n",
-    "Additionally, he wants to finalize five states for the beta launch of new sections in travel guide. Shyamal wants Yoda to suggest top 5 places for eating in these states and highlight the best state among the five selected, as he plans to add content related to the same.\n",
+    "Additionally, he wants to finalize five states for the beta launch of new sections in travel guide. Shyamal wants Yoda to suggest top 5 places for eating in these states and highlight the best state (This is where we will have the Battle of Neighborhoods!) among the five selected, as he plans to add content related to the same.\n",
     "\n",
     "Target Audience: Tourists visiting India\n",
     "\n",
@@ -73,7 +73,7 @@
     "\n",
     "R = f(E,C,P,V)\n",
     "\n",
-    "This will require cumulating data at the state level.\n",
+    "This will require cumulating data at the state level\n",
     "\n",
     "Obviosuly one can add more parameters but for the purpose of this assignment Yoda will limit to these.\n",
     "\n"
