changes based on implementation

--- a/cp-bon.ipynb
+++ b/cp-bon.ipynb
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to find our languages we choose for translation, we need to find tourists visit India belong from nation mainly. And what is the most promiment spoken language in that country. \n",
+    "In order to find languages we choose for translation, we need to find tourists visiting India belong to which nation mainly. And what is the most prominent spoken language in that country. \n",
     "\n",
     "#### Data1 \n",
     "Yoda plans to use Indian Government data on foreign tourists to identify top nationalities. \n",
@@ -51,9 +51,9 @@
     "    This page lists official languages for most nations. Yoda will leverage result of Data1 Analysis, to find **two languages** to be used for travel guides.\n",
     "\n",
     "#### Data3\n",
-    "For finding the **states for beta launch**, we need to identify which states were visted the most by foreign tourists . \n",
+    "For finding the **states for beta launch**, Yoda needs to identify which states were visted the most by foreign tourists. \n",
     "\n",
-    "We will leverage [State/ UT wise] (https://data.gov.in/resources/stateut-wise-details-foreign-tourist-visits-2014-2016-ministry-tourism) data for this. \n",
+    "Yoda will leverage [State/ UT wise] (https://data.gov.in/resources/stateut-wise-details-foreign-tourist-visits-2014-2016-ministry-tourism) data for this. \n",
     "\n",
     "The above link provides data in various formats. Yoda plans to use CSV version. \n",
     "\n",
@@ -67,11 +67,11 @@
     "Additionally data for cleanliness(Swatchhta) and price index will be used for ranking calculation. \n",
     "\n",
     "#### Data5\n",
-    "Cleanliness data will be obtained from 2017 ranking [here](http://indpaedia.com/ind/index.php/Cleanliness_ranks_of_Indian_cities,_districts:_2017#Ranks_1-434:_The_complete_list). Since it ranks cities directly Yoda will use this data directly and normalize it for ranking calculation.\n",
+    "Cleanliness data will be obtained from 2017 ranking [here](http://indpaedia.com/ind/index.php/Cleanliness_ranks_of_Indian_cities,_districts:_2017#Ranks_1-434:_The_complete_list). Since it ranks cities, Yoda will use this data directly and normalize it for ranking calculation.\n",
     "\n",
     "Price index data will be obtained from this [link](https://www.expatistan.com/cost-of-living/country/india). More the price index lower the rank. \n",
     "\n",
-    "So, ranking R will be a function data points obtained from foursquare API V (number of venues), C (number of categories), S (rank from Swatchhta Abhiyan), P (Price Index)\n",
+    "So, ranking R will be a function of data points obtained from foursquare API V (number of venues), C (number of categories), S (rank from Swatchhta Abhiyan), P (Price Index)\n",
     "\n",
     "**R = f(V,C,S,P)\n",
     "\n",
@@ -81,7 +81,7 @@
     "\n",
     "\n",
     "#### Similar Cities\n",
-    "Yoda will cluster five cities selected into two groups based on venue data obtained above. Cities falling in the same group will be considered similar\n"
+    "Yoda will cluster five cities identified into two groups based on venue data obtained above. Cities falling in the same group will be considered similar"
    ]
   },
   {
